// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Month /> snapshots renders component with props 1`] = `
<div
  className="mfui-beta-month"
>
  <div
    className="mfui-beta-month__header"
  >
    <test-file-stub
      className="mfui-beta-month__arrow"
      onClick={[Function]}
    />
    <span
      className="mfui-beta-month__title"
    >
      monthLabel 1994
    </span>
    <test-file-stub
      className="mfui-beta-month__arrow"
      onClick={[Function]}
    />
  </div>
  <div
    className="mfui-beta-month__weekday-labels"
  >
    <div
      className="mfui-beta-month__weekday"
      key="label10"
    >
      label1
    </div>
    <div
      className="mfui-beta-month__weekday"
      key="label21"
    >
      label2
    </div>
  </div>
  <div
    className="mfui-beta-month__days"
  >
    <div />
  </div>
</div>
`;

exports[`<Month /> snapshots renders component with props disabled arrows 1`] = `
<div
  className="mfui-beta-month"
>
  <div
    className="mfui-beta-month__header"
  >
    <test-file-stub
      className="mfui-beta-month__arrow mfui-beta-month__arrow_disabled"
      onClick={[Function]}
    />
    <span
      className="mfui-beta-month__title"
    >
      monthLabel 1994
    </span>
    <test-file-stub
      className="mfui-beta-month__arrow mfui-beta-month__arrow_disabled"
      onClick={[Function]}
    />
  </div>
  <div
    className="mfui-beta-month__weekday-labels"
  >
    <div
      className="mfui-beta-month__weekday"
      key="label10"
    >
      label1
    </div>
    <div
      className="mfui-beta-month__weekday"
      key="label21"
    >
      label2
    </div>
  </div>
  <div
    className="mfui-beta-month__days"
  >
    <div />
  </div>
</div>
`;
